# Null-Pointer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml  ideal.md  package-lock.json  package.json  playwright.config.ts  ui-bang-dieu-hanh.md  ui-benh-nhan.md  ui-lich-hen.md  ui.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py
backend/app/modules/clinical_orders/: entities.py  exceptions.py  repository.py  schemas.py  service.py
backend/app/modules/reservations/: exceptions.py  repository.py  router.py  runtime.py  schemas.py  service.py
backend/app/modules/routing/: catalog.py  exceptions.py  optimizer.py  repository.py  router.py  runtime.py  schemas.py  service.py
backend/app/modules/simulation/: __init__.py  clinical_order_repository.py  clinical_order_router.py  clinical_order_runtime.py  clinical_order_schemas.py  clinical_order_service.py  clinical_service_fixtures.py  clinical_service_repository.py  clinical_service_router.py  clinical_service_runtime.py  fixtures.py  room_repository.py  router.py  runtime.py  schemas.py  service.py
backend/tests/: test_clinical_order_dispatch.py  test_clinical_service_api.py  test_clinical_service_catalog.py  test_persistent_patient_journey.py  test_reservations.py  test_routing_optimizer.py  test_simulation_api.py  test_simulation_room_management.py  test_simulation_service.py
docs/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css
(+67 files in other folders)
